Reuse OkHttpClient and cache OkHttp requests to improve performance