@@ -11,10 +11,10 @@ import org.jetbrains.annotations.NotNull;
 final public class KeyupRequest extends ECPRequest<Void> {
 
 	private final String key;
-	
+
 	public KeyupRequest(String url, String key) throws UnsupportedEncodingException {
 		super(url);
-		this.key = URLEncoder.encode(key, StandardCharsets.UTF_8.name());
+		this.key = URLEncoder.encode(key, StandardCharsets.UTF_8);
 	}
 	
 	@Override
